fix align items problem

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     margin-left: 17%;
+    margin-right: 17%;
 }
 
 #form {
@@ -85,7 +86,7 @@ p a {
 
 footer {
     background: #000;
-    padding: 15px 15%;
+    padding: 15px 17%;
     font-family: "Inconsolata";
     font-style: normal;
     font-weight: 400;
